tekton-install/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-access
  namespace: tekton-pipelines
spec:
  defaultBackend:
    service:
      name: tekton-dashboard
      port:
        number: 9097
  rules:
  - host: tekton.synectiks.net  
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
